--- a/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_HeaderPartial.cshtml
@@ -21,7 +21,7 @@
                 @if (_signInManager.IsSignedIn(User))
                 {
                         <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
-
+                        <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
                     @if(User.IsInRole("SuperAdmin"))
                     {
                         <a class="menu-link" asp-controller="Admin" asp-action="Index">Admin Portal</a>
@@ -65,6 +65,8 @@
                             <img src="~/images/profile-image.svg" alt="Profile image">
                         </a>
                     </div>
+
+             
             }
             else
             {
@@ -87,10 +89,16 @@
         <div class="account-buttons">
             @if (_signInManager.IsSignedIn(User))
             {
-                @* <a class="btn-gray" asp-controller="Auth" asp-action="SignOut"><i class="fa-light fa-right-to-bracket"></i><span>Sign Out</span></a> *@
+                
+                 <a class="btn-theme" asp-controller="Auth" asp-action="SignOut"><i class="fa-solid fa-right-from-bracket"></i><span>Sign Out</span></a>
+                    <div class="profile-img">
+                        <a asp-controller="Account" asp-action="Details">
+                        <img src="~/images/profile-image.svg" alt="Profile image">
+                        </a>
+                    </div>
+            
+                    
 
-
-            <a class="btn-theme" asp-controller="Auth" asp-action="SignOut"><i class="fa-solid fa-right-from-bracket"></i>Sign Out</a>
             }
             else
             {
@@ -100,8 +108,26 @@
 
             <div class="menu">
                 <nav>
-                    <a class="menu-link" href="#overview">Overview</a>
-                    <a class="menu-link" href="#features">Featueres</a>
+                    <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="overview">Overview</a>
+
+                    @if (_signInManager.IsSignedIn(User))
+                    {
+                        <a class="menu-link" asp-controller="Courses" asp-action="Index">Courses</a>
+                        <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
+                            @if (User.IsInRole("SuperAdmin"))
+                            {
+                                <a class="menu-link" asp-controller="Admin" asp-action="Index">Admin Portal</a>
+
+                            }
+                    }
+                    else
+                    {
+                        <a class="menu-link" asp-controller="Home" asp-action="Index" asp-fragment="features">Features</a>
+                    }
+
+
+
+                    
                     <a class="menu-link" asp-controller="Contact" asp-action="Index">Contact</a>
                 </nav>
             </div>
