--- a/Silicon_MVC/wwwroot/css/scss/_sections.scss
+++ b/Silicon_MVC/wwwroot/css/scss/_sections.scss
@@ -14,4 +14,5 @@
 @import './sections/_signin.scss';
 @import './sections/_signup.scss';
 @import './sections/_details.scss';
+@import './sections/_security.scss';
 
