--- a/Silicon_MVC/wwwroot/css/scss/sections/_contact.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_contact.scss
@@ -1,6 +1,11 @@
 .contact {
     background-color: $gray-100;
 
+    .dark-mode & {
+        background-color: $gray-900 !important;
+        color: $white;
+    }
+
     .container {
         position: relative;
 
