--- a/Silicon_MVC/wwwroot/css/scss/sections/_features.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_features.scss
@@ -61,6 +61,9 @@
                     cursor: pointer;
                     background: $white;
                     @include shadow-m;
+                    /*.dark-mode & {
+                        color: $gray-900 !important;
+                    }*/
                 }
 
                 img {
@@ -72,10 +75,22 @@
 
                 h5 {
                     @include h5;
+
+                    &:hover {
+                        .dark-mode & {
+                            color: $gray-900 !important;
+                        }
+                    }
                 }
 
                 p {
                     @include text-m;
+
+                    &:hover {
+                        .dark-mode & {
+                            color: $gray-900 !important;
+                        }
+                    }
                 }
             }
         }
