--- a/Silicon_MVC/wwwroot/css/scss/sections/_integrate.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_integrate.scss
@@ -1,6 +1,7 @@
 .integrate {
     padding: 80px 0;
 
+
     .container {
         display: grid;
         justify-content: center;
@@ -9,7 +10,13 @@
         .features {
             margin-top: 20px;
             display: grid;
-            background-color:$white;
+            background-color: $white;
+
+
+            .dark-mode & {
+                background-color: $gray-900 !important;
+                color: $white;
+            }
 
             @include lg {
                 grid-template-columns: 1fr 1fr 1fr 1fr;
@@ -37,6 +44,13 @@
                     display: flex;
                     justify-content: left;
                     text-align: left;
+
+                    &:hover {
+                        .dark-mode & {
+                            
+                            color: $gray-900 !important;
+                        }
+                    }
                 }
             }
         }
