--- a/Silicon_MVC/Views/Courses/Index.cshtml
+++ b/Silicon_MVC/Views/Courses/Index.cshtml
@@ -25,7 +25,7 @@
                     <option value="developers">All Categories</option>
                     <option value="developer">developer</option>
                     <option value="frontend">frontend</option>
-                    <option value="fulstack">fulstack</option>
+                    <option value="full-stack">full-stack</option>
                     <option value="python">python</option>
                     <option value="ultimate">ultimate</option>
                 </select>
