--- a/Silicon_MVC/Views/Shared/Sections/_SwitchDarkLight.cshtml
+++ b/Silicon_MVC/Views/Shared/Sections/_SwitchDarkLight.cshtml
@@ -13,7 +13,7 @@
         </div>
 
         <div class="img-switch">
-            <img src="images\SwitchDarkLight.svg" alt="dark and light mode">
+            <img src="images\macbook.png" alt="dark and light mode">
             <button class="arrow-button">
                 <i class="fa-solid fa-arrows-left-right"></i>
             </button>
