--- a/Silicon_MVC/wwwroot/css/scss/core/_colors.scss
+++ b/Silicon_MVC/wwwroot/css/scss/core/_colors.scss
@@ -9,6 +9,7 @@ $gray-600: #9397AD;
 $gray-700: #565973;
 $gray-800: #33354D;
 $gray-900: #0B0F19;
+$blue: #1E212B;
 $black: #000000;
 $danger: #ec4899;
 $success: #14b8a6;
