--- a/Silicon_MVC/wwwroot/css/scss/sections/_signin.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_signin.scss
@@ -46,6 +46,10 @@
                     margin: 1rem 0 0 0;
                     text-align: center;
                 }
+
+                #form-forgot-password {
+                    text-align: center;
+                }
             }
         }
     }
