--- a/Silicon_MVC/wwwroot/css/scss/sections/_switchDarkLight.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_switchDarkLight.scss
@@ -20,6 +20,10 @@
     .light {
         background-color: white;
         flex: 1;
+
+        /*.dark-mode & {
+            color: $gray-900 !important;
+        }*/
     }
 }
 
