--- a/Silicon_MVC/wwwroot/css/scss/sections/_details.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_details.scss
@@ -17,7 +17,7 @@
 
     aside {
         @include lg {
-            border-right: 0.063rem solid $gray-300;
+            border-right: 0.04rem solid $gray-600;
             padding-right: 20px;
         }
 
@@ -40,12 +40,12 @@
             flex-direction: column;
             gap: 10px;
             margin-top: 50px;
-            text-align: center;
+            text-align: left !important;
 
             a {
                 display: block;
                 margin-top: 10px;
-                text-align: center;
+                //text-align: center;
 
                 i {
                     color: $gray-700;
@@ -159,7 +159,8 @@
 
 
                         span {
-                            color: $gray-500;
+                            color: $gray-400;
+
                             font-weight: 400;
                         }
                     }
