--- a/Silicon_MVC/wwwroot/css/scss/sections/_features.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_features.scss
@@ -2,10 +2,10 @@
     background-color: $gray-100;
     padding: 80px 0;
 
-    .dark-mode & {
+    /*.dark-mode & {
         background-color: $gray-900;
         color: $white;
-    }
+    }*/
 
     .container {
         display: grid;
@@ -33,7 +33,7 @@
                     }
 
                     &:nth-child(2) {
-                        border-top: 0px solid $gray-300;
+                        border-top: 0px solid $gray-600;
                     }
 
                     &:nth-child(3) {
@@ -61,9 +61,7 @@
                     cursor: pointer;
                     background: $white;
                     @include shadow-m;
-                    /*.dark-mode & {
-                        color: $gray-900 !important;
-                    }*/
+                    
                 }
 
                 img {
@@ -76,21 +74,13 @@
                 h5 {
                     @include h5;
 
-                    &:hover {
-                        .dark-mode & {
-                            color: $gray-900 !important;
-                        }
-                    }
+                   
                 }
 
                 p {
                     @include text-m;
-
-                    &:hover {
-                        .dark-mode & {
-                            color: $gray-900 !important;
-                        }
-                    }
+                    color:$gray-500;
+                    
                 }
             }
         }
