--- a/Silicon_MVC/wwwroot/css/scss/sections/_header.scss
+++ b/Silicon_MVC/wwwroot/css/scss/sections/_header.scss
@@ -1,10 +1,11 @@
 header {
+    
     padding: 15px 0;
 
-    .dark-mode & {
+   /* .dark-mode & {
         background-color: $gray-900 !important;
         color: $white;
-    }
+    }*/
 
     &.gray {
         background-color: $gray-100;
@@ -90,9 +91,9 @@ header {
         align-items: center;
         background-color: $white;
 
-        .dark-mode & {
+        /*.dark-mode & {
             background-color: $gray-900;
-        }
+        }*/
 
 
         .account-buttons {
